# django-cqrs

./: .gitignore  .readthedocs.yaml  .travis.yml  Jenkinsfile  LICENSE  MANIFEST.in  README.md  compat_tests.sh  integration_tests.sh  jenkins.sh  mkdocs.yml  pyproject.toml  setup.cfg  setup.py  sonar-project.properties  tox.ini  travis_compat_tests.sh  travis_integration_tests.sh
.github/workflows/: build.yml  ci.yml  publish.yml
dj_cqrs/: __init__.py  _validation.py  admin.py  apps.py  constants.py  correlation.py  dataclasses.py  delay.py  factories.py  logger.py  managers.py  metas.py  mixins.py  registries.py  signals.py  state.py  tracker.py  transport.py  utils.py
dj_cqrs/controller/: consumer.py  producer.py
dj_cqrs/management/: __init__.py  utils.py
dj_cqrs/management/commands/: cqrs_bulk_dump.py  cqrs_bulk_load.py  cqrs_consume.py  cqrs_dead_letters.py  cqrs_deleted_diff_master.py  cqrs_deleted_diff_replica.py  cqrs_deleted_sync_replica.py  cqrs_diff_master.py  cqrs_diff_replica.py  cqrs_diff_sync.py  cqrs_sync.py  start_cqrs_consumer.py  utils.py
dj_cqrs/transport/: __init__.py  base.py  kombu.py  mixins.py  mock.py  pubsub.py  rabbit_mq.py
docs/: admin.md  admin.rst  conf.py  custom_serialization.md  custom_serialization.rst  getting_started.md  getting_started.rst  index.md  index.rst  lifecycle.md  lifecycle.rst  macros.py  reference.md  reference.rst  track_fields_changes.md  track_fields_changes.rst  transports.md  transports.rst  utilities.md  utilities.rst
docs/_static/css/: custom.css
docs/css/: custom.css
examples/demo/: README.md  docker-compose.yml
examples/demo/master_app/app/: asgi.py  models.py  serializers.py  settings.py  urls.py  views.py  wsgi.py
examples/demo/master_app/app/migrations/: 0001_initial.py  0002_auto_20210714_1511.py
examples/demo/master_app/templates/: main.html
examples/demo/replica_app/app/: asgi.py  models.py  serializers.py  settings.py  urls.py  views.py  wsgi.py
examples/demo/replica_app/app/migrations/: 0001_initial.py
examples/demo/replica_app/templates/: main.html
examples/demo_project/: README.md  docker-compose.yml
examples/demo_project/master_service/: __init__.py  manage.py  requirements.txt
examples/demo_project/master_service/app/: asgi.py  models.py  serializers.py  settings.py  urls.py  views.py  wsgi.py
examples/demo_project/master_service/app/migrations/: 0001_initial.py  0002_fixtures.py
examples/demo_project/master_service/templates/: main.html
examples/demo_project/replica_service/: Dockerfile  requirements.txt
examples/demo_project/replica_service/app/: asgi.py  models.py  settings.py  urls.py  views.py  wsgi.py
examples/demo_project/replica_service/app/migrations/: 0001_initial.py
examples/demo_project/replica_service/templates/: main.html
integration_tests/: Dockerfile  Dockerfile.Master  Dockerfile.MasterV1  Dockerfile.Replica  Dockerfile.ReplicaV1  Makefile  __init__.py  docker-compose.yml  kombu.yml  manage.py  masterV1.yml  master_settings.py  rdbms.yml  replicaV1.yml  replica_settings.py  replica_wsgi.py  run_integration_tests.sh  setup.cfg
integration_tests/tests/: conftest.py  test_asynchronous_consuming.py  test_bulk_operations.py  test_dead_letter.py  test_diff.py  test_single_basic_instance.py  test_sync_to_a_certain_service.py  utils.py
integrational_tests/: Dockerfile.Master  Dockerfile.Replica  docker-compose.yml  manage.py  master_settings.py  replica_settings.py  replica_wsgi.py  setup.cfg
integrational_tests/tests/: conftest.py  test_bulk_operations.py  test_rabbit_mq.py  test_single_basic_instance.py  utils.py
requirements/: dev.txt  docs.txt  test.txt
tests/: __init__.py  conftest.py  test_admin.py  test_controller.py  test_correlation.py  test_dataclasses.py  test_delay.py  test_flow.py  test_logger.py  test_meta.py  test_metas.py  test_registries.py  test_transport.py  test_utils.py  test_validation.py  utils.py
tests/dj/: settings.py  transport.py  urls.py
tests/dj_master/: models.py  serializers.py
tests/dj_master/management/commands/: bulk_demo.py
tests/dj_replica/: models.py
tests/test_commands/: __init__.py  test_bulk_dump.py  test_bulk_flow.py  test_bulk_load.py  test_consume.py  test_dead_letters.py  test_deleted_diff_master.py  test_deleted_diff_replica.py  test_deleted_sync_replica.py  test_diff_master.py  test_diff_replica.py  test_diff_sync.py  test_sync.py  utils.py
tests/test_commands/dumps/: author.dump  bad_master_data.dump  no_rows.dump  unparseable.dump
tests/test_master/: test_mixin.py  test_signals.py
tests/test_replica/: __init__.py  test_factory.py  test_mixin.py
tests/test_transport/: __init__.py  test_base.py  test_kombu.py  test_mock.py  test_rabbit_mq.py
